# message_core

./: .gitignore  CMakeLists.txt  core.cpp  core.h  main.cpp
db/: DBManager.cpp  DBManager.h  db.cpp  db.h
dependencies/: CMakeLists.txt  CoreDependencies.cpp  CoreDependencies.h
http/: HTTPManager.cpp  HTTPManager.h  http.cpp
models/: MessagesManager.cpp  MessagesManager.h
src/db/: CMakeLists.txt  MessageRecord.cpp  MessageRecord.h  db.cpp  db.h
src/http/: Cmakelists.txt  http.h
src/models/: CMakeLists.txt  History.cpp  History.h  Message.h  MessagesManager.cpp  MessagesManager.h  TextMessage.cpp  TextMessage.h  core.cpp  core.h
tests/: CMakeLists.txt  tests_main.cpp
users_not/: User.cpp  User.h  UsersManager.h  core_2.cpp  core_2.h
Доккументы/: Работа_ядра.drawio
